--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ build = "build.rs"
 bindgen = "0.22.0"
 
 [replace]
-"clang-sys:0.14.0" = { git = "https://github.com/KyleMayes/clang-sys.git" }
+"clang-sys:0.14.0" = { git = "https://github.com/KyleMayes/clang-sys.git", rev = "43849c" }
